--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   padding: 40px;
-  background-color: #f3f3f3;
+  background-color:wheat;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,7 +29,7 @@ body {
 .task-input {
   width: 500px;
   padding: 14px 20px;
-  border: 2px solid #ccc;
+  border: 2px solid grey;
   border-radius: 25px;
   font-size: 16px;
   margin-right: 10px;
